[tool.poetry]
name = "article-navigator"
version = "0.1.0"
description = "Finding the best route to any article in the supermarket."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
fastapi = "^0.61.1"
numpy = "^1.19.2"
cython = "^0.29.21"
pyconcorde = { git = "https://github.com/jvkersch/pyconcorde.git" }
tsplib95 = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
pylint = "^2.6.0"
matplotlib = "^3.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
